<resources>
    <string name="app_name">BigScienceQuiz</string>
    <string name="exit_intent">bsq_exit</string>
    <string name="exit">Exit</string>

    <string name="display_name">BIG SCIENCE QUIZ</string>
    <string name="logo_letter">Q</string>
    <string name="server_ip_text">Enter server IP:PORT</string>
    <string name="start">START</string>
    <string name="bsq_logo">BSQ Logo</string>
<<<<<<< HEAD
    <string name="default_server_ip">192.168.178.45:8080</string>
=======
    <string name="default_server_ip">192.168.1.1:8080</string>
>>>>>>> 96412f380e49bc09ba40b96954f792216a1bb2e4
    <string name="team_hint">Choose your team name</string>
    <string name="team_number">0</string>
    <string name="team_members_label">Team Members:</string>
    <string name="no_internet">No Internet</string>
    <string name="confirmed_answer">You have confirmed your answer. Wait for all teams to answer, please.</string>
    <string name="question_closed">You cannot answer anymore, the question has already been closed.</string>
    <string name="press_to_confirm_answer">Press the answer again to confirm.</string>
    <string name="correct_answer_hint">Correct Answer!</string>
    <string name="wrong_answer_hint">Wrong Answer!</string>
    <string name="already_answered">You have already answered this question.</string>
    <string name="close">Close</string>
</resources>
