<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bsq_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_margin"
        android:text="@string/display_name"
        android:textSize="36sp"/>

    <ImageView
        android:id="@+id/bsq_logo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_centerInParent="true"
        android:src="@drawable/logo_circle"
        android:contentDescription="@string/bsq_logo"/>

    <TextView
        android:id="@+id/team_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bsq_logo"
        android:layout_alignEnd="@+id/bsq_logo"
        android:layout_alignLeft="@+id/bsq_logo"
        android:layout_alignRight="@+id/bsq_logo"
        android:layout_alignStart="@+id/bsq_logo"
        android:layout_alignTop="@+id/bsq_logo"
        android:ems="10"
        android:gravity="center"
        android:text="@string/logo_letter"
        android:textSize="@dimen/logo_text"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bsq_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/small_space_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/server_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_ip_text"
            android:text="@string/default_server_ip"
            android:inputType="textUri"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/start"/>

</RelativeLayout>